--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
 {
   "name": "Missão Peru",
   "short_name": "Missão Peru",
-  "start_url": "index.html",
+  "description": "Um chamado para os que têm coragem de dizer sim.",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#000814",
   "theme_color": "#15803D",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "logo-missao-peru.png",
